<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/padding_20dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_picture"
        android:src="@drawable/circle"
        app:civ_border_width="2dp"
        app:civ_border_color="#FF000000"
        android:layout_width="@dimen/padding_100dp"
        android:layout_height="@dimen/padding_100dp" />

    <TextView
        android:id="@+id/fullname_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_10dp"
        app:layout_constraintTop_toBottomOf="@+id/profile_picture"
        android:text="@string/fullname" />

    <TextView
        android:id="@+id/fullname_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmallBlack"
        app:layout_constraintTop_toBottomOf="@+id/fullname_title"
        android:text="@string/fullname" />

    <TextView
        android:id="@+id/company_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_5dp"
        app:layout_constraintTop_toBottomOf="@+id/fullname_content"
        android:text="@string/company" />

    <TextView
        android:id="@+id/company_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmallBlack"
        app:layout_constraintTop_toBottomOf="@+id/company_title"
        android:text="@string/company" />

    <TextView
        android:id="@+id/blog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_5dp"
        app:layout_constraintTop_toBottomOf="@+id/company_content"
        android:text="@string/blog" />

    <TextView
        android:id="@+id/blog_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmallBlack"
        app:layout_constraintTop_toBottomOf="@+id/blog_title"
        android:text="@string/blog" />

    <TextView
        android:id="@+id/location_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_5dp"
        app:layout_constraintTop_toBottomOf="@+id/blog_content"
        android:text="@string/location" />

    <TextView
        android:id="@+id/location_content"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/TextSmallBlack"
        app:layout_constraintTop_toBottomOf="@+id/location_title"
        android:text="@string/location" />


    <TextView
        android:id="@+id/public_reposcontent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/padding_20dp"
        android:gravity="center_horizontal"
        style="@style/TextLargeBlack"
        android:text="@string/qiuqiuqiu"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/private_reposcontent"
        app:layout_constraintTop_toBottomOf="@+id/location_content" />



    <TextView
        android:id="@+id/private_reposcontent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/TextLargeBlack"
        app:layout_constraintBaseline_toBaselineOf="@id/public_reposcontent"
        app:layout_constraintLeft_toRightOf="@id/public_reposcontent"
        app:layout_constraintRight_toLeftOf="@+id/followerscontent"
        android:text="@string/qiuqiuqiu" />

    <TextView
        android:id="@+id/followerscontent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/TextLargeBlack"
        app:layout_constraintBaseline_toBaselineOf="@id/public_reposcontent"
        app:layout_constraintLeft_toRightOf="@id/private_reposcontent"
        app:layout_constraintRight_toLeftOf="@+id/followingcontent"
        android:text="@string/qiuqiuqiu" />

    <TextView
        android:id="@+id/followingcontent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        style="@style/TextLargeBlack"
        app:layout_constraintBaseline_toBaselineOf="@id/public_reposcontent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/followerscontent"
        android:text="@string/qiuqiuqiu" />

    <TextView
        android:id="@+id/public_repos_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/public_repos"

        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/private_repos_title"
        app:layout_constraintTop_toBottomOf="@+id/public_reposcontent" />



    <TextView
        android:id="@+id/private_repos_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@id/public_repos_title"
        app:layout_constraintLeft_toRightOf="@id/public_repos_title"
        app:layout_constraintRight_toLeftOf="@+id/followers_title"
        android:text="@string/private_repos" />

    <TextView
        android:id="@+id/followers_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@id/public_repos_title"
        app:layout_constraintLeft_toRightOf="@id/private_repos_title"
        app:layout_constraintRight_toLeftOf="@+id/following_title"
        android:text="@string/followers" />

    <TextView
        android:id="@+id/following_title"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        app:layout_constraintBaseline_toBaselineOf="@id/public_repos_title"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toRightOf="@id/followers_title"
        android:text="@string/followers" />





</android.support.constraint.ConstraintLayout>